--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,12 @@ node_modules
 
 # Optional REPL history
 .node_repl_history
+
+# Don't upload _config
+_config.js
+models/_config.js
+/models/_config.js
+routes/_config.js
+/routes/_config.js
+routes/api/_config.js
+/routes/api/_config.js
