--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
   "dependencies": {
     "body-parser": "^1.15.0",
     "express": "^4.13.4",
+    "jsonwebtoken": "^5.5.4",
     "mongoose": "^4.4.3",
+    "morgan": "^1.6.1",
     "slug": "^0.9.1"
   }
 }
