--- a/package.json
+++ b/package.json
@@ -17,11 +17,20 @@
   },
   "homepage": "https://github.com/AaronLeoCooper/node-rest-basic#readme",
   "dependencies": {
+    "bcrypt": "^0.8.5",
     "body-parser": "^1.15.0",
+    "cookie-parser": "^1.4.1",
+    "ejs": "^2.4.1",
     "express": "^4.13.4",
+    "express-partials": "^0.3.0",
+    "express-session": "^1.13.0",
     "jsonwebtoken": "^5.5.4",
     "mongoose": "^4.4.3",
     "morgan": "^1.6.1",
+    "passport": "^0.3.2",
+    "passport-http": "^0.3.0",
+    "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^4.0.0",
     "slug": "^0.9.1"
   }
 }
